--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,6 @@ version: "3"
 services:
   hub:
     image: selenium/hub:3.14
-    ports:
-      - "4444:4444"
   chrome:
     image: selenium/node-chrome:3.14      
     depends_on:
@@ -27,7 +25,7 @@ services:
       - BROWSER=firefox
       - MODULE=search-module.xml
     volumes:
-      - ./search-result:/usr/share/udemy/test-output      
+      - ./output/search-result:/usr/share/udemy/test-output      
   book-flight-module:
     image: vinsdocker/selenium-docker
     depends_on:
@@ -38,4 +36,4 @@ services:
       - BROWSER=chrome
       - MODULE=book-flight-module.xml
     volumes:
-      - ./book-result:/usr/share/udemy/test-output   
+      - ./output/book-result:/usr/share/udemy/test-output   
